--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Click on index.html: <br><img src="http://drp.io/files/530617faa31b5.png">
   <li>Make a <h3>Headline</h3></li>
   <li>Your headline here: <h3>This is a nice headline</h3>
   <li>Add an image (<a href="http://forum.koramgame.com/thread-60307-1-1.html">here's some help</a>): <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Smiley.svg/800px-Smiley.svg.png" height="50" width="50"</li>
-  <li>Your image here: 
+  <li>Your image here: <img src="http://wmbf.images.worldnow.com/images/15478226_BG1.gif" height="50" width="50"</1i>
   <li><a href="http://www.coceleratoru.com">Link</a> to some website.</li>
   <li>Your link here: <a href="https://www.google.com/search?q=coastal+carolina+university&safe=off&source=lnms&tbm=isch&sa=X&ei=kicGU4zQAYSrkQeGvIDgCA&ved=0CAcQ_AUoAQ&biw=1920&bih=955">CCU Google Images</a>
   <li>Add another item to the bottom of this list!</li>
