Update and rename Readme.md to index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Click on index.html: <br><img src="http://drp.io/files/530617faa31b5.png">
   <li>Your link here: <a href="https://www.google.com/search?q=coastal+carolina+university&safe=off&source=lnms&tbm=isch&sa=X&ei=kicGU4zQAYSrkQeGvIDgCA&ved=0CAcQ_AUoAQ&biw=1920&bih=955">CCU Google Images</a>
   <li>Add another item to the bottom of this list!</li>
   <li>Read about <a href="http://www.quackit.com/html/tags/">other HTML tags</a> and use one here that hasn't been used yet!</li>
-  <li><iframe>This exercise is pretty cool</iframe></li>
+  <li><caption>I think that this is a caption</1i>
   
 </ol>
 
