--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <li>Add another item to the bottom of this list!</li>
   <li>Read about <a href="http://www.quackit.com/html/tags/">other HTML tags</a> and use one here that hasn't been used yet!</li>
   
+  <big>Danny Merriman</big>
   
 
 <br>The End.
