--- a/class13.html
+++ b/class13.html
@@ -83,7 +83,7 @@
   </head>
   
   <body>
-  <h1>Class 13: Exercises 5+</h1>
+  <h1><p style="color:#5F9EA0;">Class 13: Exercises 5+</h1>
   
 <h2 id="Exercise5">Exercise 5: Name in your Readme</h2>
 
@@ -94,7 +94,7 @@
 <h2 id="Exercise6">Exercise 6: Cascading Style Sheets</h2>
 <ol>
 <li>CSS inline like this: <p style="color:blue;">This is Blue</p></li>
-<li>Now use the same method to make the word the correct color: Red</li>
+<li>Now use the same method to make the word the correct color: <p style="color:red;"></li>
 <li>CSS full-page: Scroll to the top of this code, and look for the comment above h2, Change the color from black to <a href="http://www.somacon.com/p142.php">another color</a></li>
 </ol>
 
