--- a/class13.html
+++ b/class13.html
@@ -25,7 +25,7 @@
         }
         /* Make a change below for Exercise 6*/
         h2 {
-          color: black;
+          color: #5F9EA0;
         }
 
         .container {
@@ -83,7 +83,7 @@
   </head>
   
   <body>
-  <h1><p style="color:#5F9EA0;">Class 13: Exercises 5+</h1>
+  <h1>Class 13: Exercises 5+</h1>
   
 <h2 id="Exercise5">Exercise 5: Name in your Readme</h2>
 
