--- a/class13.html
+++ b/class13.html
@@ -100,12 +100,12 @@
 
 <h2 id="Exercise7">Exercise 7: Embedding HTML</h2>
 <ol>
-<li>Embed survey code: Go back to your survey you made in Google Drive. Click the 'send form' link. There's an option to embed your survey. Past that code below this list.</li>
+<li>Embed survey code: Go back to your survey you made in Google Drive. Click the 'send form' link. There's an option to embed your survey. Paste that code below this list.</li>
 <li><a href="http://bit.ly/Ae1Gis">Embed a youtube video below this list - You'll see a comment for where it should go</li>
 </ol>
 
 <!--Embed your survey code below this line:-->
-
+<li><h ref=https://docs.google.com/forms/d/1H4RPUbjvu42z48-czsVQiqczqtU8tDAw1Zf0cSj4zoI/viewform>Take my survey here</h></li>
 <!--Embed a youtube video below this line:-->
 
 <h2 id="Exercise8">Exercise 8: Advanced</h2>
