--- a/class13.html
+++ b/class13.html
@@ -107,7 +107,7 @@
 <!--Embed your survey code below this line:-->
 <li><a href="https://docs.google.com/forms/d/1H4RPUbjvu42z48-czsVQiqczqtU8tDAw1Zf0cSj4zoI/viewform">Take my survey here</li>
 <!--Embed a youtube video below this line:-->
-
+<li><iframe width="420" height="315" src="//www.youtube.com/embed/qpl5mOAXNl4" frameborder="0" allowfullscreen></iframe>Click here to see a stupid cat.</li>
 <h2 id="Exercise8">Exercise 8: Advanced</h2>
 
 <p>If you’re ahead:
